k8s/jellyseerr/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr-ingressroute
  namespace: jellyseerr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(\`jellyseerr.home.coredev.uk\`)
      kind: Rule
      services:
        - name: jellyseerr
          port: 5055
  tls:
    secretName: jellyseerr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr-redirect
  namespace: jellyseerr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(\`jellyseerr.home.coredev.uk\`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: jellyseerr
          port: 5055
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: jellyseerr
spec:
  redirectScheme:
    scheme: https
    permanent: true
